--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ async-std = { version = "1.9.0", features = ["attributes"] }
 async-tls = "0.11.0"
 async-tungstenite = "0.13.1"
 futures-util = "0.3.14"
+rand = "0.8.3"
 serde = "1.0.125"
 serde_json = "1.0.64"
 slack = "0.25.0"
