--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,7 @@ jsonxf = "1.1.1"
 rand = "0.8.3"
 serde = "1.0.125"
 serde_json = "1.0.64"
-slack = "0.25.0"
-surf = "2.2.0"
+surf = {version = "2.2.0", default-features = false, features = ["h1-client-rustls"]}
 toml = "0.5.8"
 tungstenite = "0.13.0"
 url = "2.2.1"
