fix: build image trigger

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -3,6 +3,9 @@ name: Build Container Image
 on:
   push:
     paths:
+      - 'src/**'
+      - 'Cargo.toml'
+      - 'Cargo.lock'
       - 'Dockerfile'
       - '.github/workflows/**'
 
