--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -1,7 +1,10 @@
-name: Build Container Image
+name: Build Container Image & Push
 
 on:
   push:
+    branches:
+      - main
+      - develop
     paths:
       - 'src/**'
       - 'Cargo.toml'
@@ -26,7 +29,6 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Login to ghcr.io
-        if: github.event_name != 'pull_request'
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
@@ -37,6 +39,5 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
