--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "archbot-rs"
+name = "archbot"
 version = "0.1.0"
 authors = ["sksat <sksat@sksat.net>"]
 edition = "2018"
@@ -8,8 +8,10 @@ edition = "2018"
 async-std = { version = "1.9.0", features = ["attributes"] }
 async-tls = "0.11.0"
 async-tungstenite = "0.13.1"
+env_logger = "0.8.3"
 futures-util = "0.3.15"
 jsonxf = "1.1.1"
+log = "0.4.14"
 rand = "0.8.3"
 serde = "1.0.126"
 serde_json = "1.0.64"
