--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -23,7 +23,7 @@ jobs:
         id: meta
         uses: crazy-max/ghaction-docker-meta@v3
         with:
-          images: ghcr.io/${{ github.repository }}
+          images: ghcr.io/${{ github.repository }},sksat/${{ github.event.repository.name }}
 
       - name: Set up Buildx
         uses: docker/setup-buildx-action@v1
@@ -34,6 +34,12 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: sksat
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build & Push
         uses: docker/build-push-action@v2
