--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -36,6 +36,15 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx-
 
+      - name: Cache Rust
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
       - name: Login to ghcr.io
         uses: docker/login-action@v1
         with:
