--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,11 @@ name = "archbot"
 version = "0.3.1"
 authors = ["sksat <sksat@sksat.net>"]
 edition = "2018"
+build = "build.rs"
+
+[build-dependencies]
+vergen = { version = "5.1.13", default-features = false, features = ["build", "git"] }
+anyhow = "1.0.42"
 
 [dependencies]
 async-std = { version = "1.9.0", features = ["attributes"] }
