--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,10 +6,10 @@ on:
       - 'src/**'
       - 'Cargo.toml'
       - 'Cargo.lock'
-      - '.github/workflows/**'
+      - '.github/workflows/ci.yml'
 
 jobs:
-  build:
+  rust:
     runs-on: ubuntu-latest
 
     steps:
