fix: build-image trigger

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -12,6 +12,7 @@ on:
       - 'Cargo.lock'
       - 'rust-toolchain'
       - 'Dockerfile'
+      - '.dockerignore'
       - '.github/workflows/build-image.yml'
 
 jobs:
